# paner

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml
src/paner/: .main.py.swp  __init__.py  config.py  main.py  paner.py  prompt.txt  utils.py
