[project]
name = "paner"
version = "0.1.0"
description = "Terminal PDF analyzer with Groq-powered answers, vector search, and optional web search."
readme = "README.md"
authors = [
    { name = "wiseman-umanah", email = "wisemanumanah@gmail.com" }
]
license = { text = "MIT License" }
requires-python = ">=3.11"
dependencies = [
    "chromadb",
    "groq",
    "duckduckgo-search",
    "langchain",
    "langchain-community",
    "platformdirs",
    "prompt-toolkit",
    "pyfiglet>=1.0.4",
    "pymupdf",
    "rich",
    "sentence-transformers",
]
keywords = ["cli", "pdf", "rag", "groq", "terminal"]

[project.scripts]
paner = "paner:main"

[project.urls]
Homepage = "https://github.com/wiseman-umanah/paner"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"
